styling for the forgot password page

--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,18 +1,17 @@
-<div class="displayTable">
-    <div class="displayTableCell">
-      <div class="authBlock">
-        <h3>Reset Password</h3>
-        <p class="text-center">Please enter your email address to request a password reset.</p>
-        <div class="formGroup">
-          <input type="email" class="formControl" placeholder="Email Address" #passwordResetEmail required>
-        </div>
-        <!-- Calling ForgotPassword from AuthService Api -->
-        <div class="formGroup">
-          <input type="submit" class="btn btnPrimary" value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)">
-        </div>
-      </div>
-      <div class="redirectToLogin">
-        <span>Go back to ? <span class="redirect" routerLink="/sign-in">Log In</span></span>
-      </div>
+<div class="container">
+  <mat-card class="sign-in-widget">
+    <mat-card-header>
+      <h2>Reset Password</h2>
+    </mat-card-header>
+    <mat-card-subtitle>
+      <p class="subtitle">Please enter your email address to request a password reset.</p>
+    </mat-card-subtitle>
+    <div class="form">
+      <input type="email" class="formControl" placeholder="Email Address" #passwordResetEmail required>
+      <button type="submit" (click)="authService.ForgotPassword(passwordResetEmail.value)">Submit</button>
     </div>
-  </div>
+    <div>
+      <span>Go back to ? <span class="redirect" routerLink="/sign-in">Log In</span></span>
+    </div>
+  </mat-card>
+</div>
