--- a/src/app/components/forgot-password/forgot-password.component.scss
+++ b/src/app/components/forgot-password/forgot-password.component.scss
@@ -3,51 +3,44 @@
     padding: 20px;
     border: 1px solid #555;
     color: #fff;
-    max-height: 300px;
-    background: rgba(0,0,0,0.5);
-
+    max-height: 275px;
+    background: rgba(0, 0, 0, 0.5);
     mat-card-header {
         padding: 0;
     }
-
     .mat-mdc-card-header {
         padding: 0;
     }
-
     mat-card-subtitle {
         p.subtitle {
             font-size: .8em;
         }
     }
-  
     div.form {
-      display: flex;
-      flex-direction: column;
-      padding: 0 0 10px 0;
-  
-      label {
-        margin-bottom: 10px;
-      }
-  
-      input {
-        margin-bottom: 20px;
-        padding: 10px;
-        border: 1px solid #ccc;
-      }
-  
-      button {
-        background-color: blue;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-      }
+        display: flex;
+        flex-direction: column;
+        padding: 0 0 10px 0;
+        label {
+            margin-bottom: 10px;
+        }
+        input {
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid var(--cooler-3);
+        }
+        button {
+            background-color: var(--button-color);
+            color: white;
+            padding: 10px 20px;
+            border: none;
+        }
     }
-
     div {
         padding-top: 5px;
     }
-  }
-  div.container {
+}
+
+div.container {
     max-width: 100vw;
     height: 100vh;
     display: flex;
@@ -57,4 +50,3 @@
     background-size: 100%;
     background-size: cover;
 }
-  
